# alpha-ess-charging-optimizer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  ESS.py  README.md  alpha_ess_manager.py  battery_manager.py  build.sh  config.json  config.py  config.yaml  deploy-lambda.sh  energy_storage_optimizer.py  ess.py  ess_client.py  lambda_handler.py  main.py  models.py  optimizer.py  price_analyzer.py  price_cache.py  price_fetcher.py  pyproject.toml  pyvenv.cfg  requirements.txt  solar_config.yaml  test_ess.py
src/: __init__.py  battery_manager.py  ess_client.py  optimizer.py  price_analyzer.py  price_cache.py  solar_data.py
tests/: __init__.py  test_cli.py  test_december_2025.py  test_ess.py  test_january_2026.py  test_solar_forecast.py
tests/test_data/december_2025/: 2025-12-01.json  2025-12-02.json  2025-12-03.json  2025-12-04.json  2025-12-05.json  2025-12-06.json  2025-12-07.json  2025-12-08.json  2025-12-09.json  2025-12-10.json  2025-12-11.json  2025-12-12.json  2025-12-13.json  2025-12-14.json  2025-12-15.json  2025-12-16.json  2025-12-17.json  2025-12-18.json  2025-12-19.json  2025-12-20.json  2025-12-21.json  2025-12-22.json  2025-12-23.json  2025-12-24.json  2025-12-25.json  2025-12-26.json  2025-12-27.json  2025-12-28.json  2025-12-29.json  2025-12-30.json  2025-12-31.json
tests/test_data/january_2026/: 2026-01-01.json  2026-01-02.json  2026-01-03.json  2026-01-04.json  2026-01-05.json  2026-01-06.json  2026-01-07.json  (+24 more)
utils/: __init__.py  fetch_december_prices.py  fetch_january_prices.py  solar_calibration.py
